--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -14,3 +14,5 @@ dobHeader=Date de naissance
 departmentHeader=Departement
 emailHeader=Email
 nameHeader=Nom
+Previous=Page précédente
+Next=Page suivante
